@@ -1,5 +1,11 @@
 2023-09-22  Andreas Scherer  <https://ascherer.github.io>
 
+	* ctang-w2c.ch,
+	* ctangle.c,
+	* ctangle.w: Reuse code for secondary output.
+
+2023-09-22  Andreas Scherer  <https://ascherer.github.io>
+
 	* cwebacromac.tex: Factor out PDF/HINT macros.
 
 2023-09-03  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
